# otel-go-lttng-instrumentation

./: BUILD.bazel  BUILD.bzl  Makefile  Makefile.in  README.md  WORKSPACE  bazel-bin  bazel-otel-go-lttng-instrumentation  bazel-out  bazel-testlogs  configure  go.mod  main.go  tpp.c  tpp.h
otel_go_lttng_instrumentation_archive/: BUILD.bzl
