load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_cc//cc:defs.bzl", "cc_library")

# Rule for building the C static library that contains the LTTng tracepoints
cc_library(
    name = "sdk_span_tracepoints",
    srcs = ["tpp.c"],
    hdrs = ["tpp.h"],
    copts = ["-fPIC"],
    linkstatic = True,
    visibility = ["//visibility:public"],
)

go_library(
    name = "otel-go-lttng-instrumentation",
    srcs = ["go-tracepoints.go"],
    cdeps = [":sdk_span_tracepoints"],
    cgo = True,
    clinkopts = ["-ldl", "-llttng-ust"],
    importpath = "github.com/adel-belkhiri/otel-go-lttng-instrumentation",
    visibility = ["//visibility:public"],
)
